# nullweb

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
locale/fr/LC_MESSAGES/: django.po
mainweb/: urls.py  views.py
mainweb/static/mainweb/css/: about.scss  blog.scss  main.css
mainweb/static/mainweb/javascript/: paintsine.js
mainweb/templates/: base_generic.html  footer.html  header.html
mainweb/templates/mainweb/: about.html  home.html  projects.html
nullweb/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_nullpod_site.py
