[tool.poetry]
name = "nullpod-site"
version = "0.1.0"
description = ""
authors = ["jp-nullpod <jp.fortuno@nullpod.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
python-dotenv = "^0.15.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
